# Harmony

./: Cargo.toml
harmony-client/: Cargo.toml
harmony-client/src/: cmd.rs  logging.rs  main.rs
harmony-differ/: Cargo.toml
harmony-differ/src/: conflicts.rs  diffing.rs  filter.rs  lib.rs  snapshot.rs
harmony-server/: Cargo.toml
harmony-server/src/: cmd.rs  data.rs  main.rs  paths.rs
harmony-server/src/http/: auth.rs  errors.rs  mod.rs  routes.rs  state.rs
