[package]
name = "harmony-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
dialoguer = { version = "0.10.4", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
gethostname = "0.4.3"
harmony-differ = { version = "0.1.0", path = "../harmony-differ" }
indicatif = "0.17.5"
reqwest = { version = "0.11.18", features = ["json", "stream", "multipart"] }
serde = "1.0.175"
serde_json = "1.0.103"
time = { version = "0.3.23", features = ["formatting"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
