[package]
name = "harmony-client"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
dialoguer = { version = "0.11.0", default-features = false }
futures-util = { version = "0.3.29", default-features = false }
gethostname = "0.4.3"
harmony-differ = { version = "0.1.0", path = "../harmony-differ" }
indicatif = "0.17.7"
num_cpus = "1.16.0"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde = "1.0.193"
serde_json = "1.0.108"
time = { version = "0.3.30", features = ["formatting"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
