[package]
name = "harmony-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", default-features = false, features = [
    "http1",
    "http2",
    "tokio",
    "json",
    "headers",
    "query",
    "macros",  # for debugging
] }
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
env_logger = "0.10.0"
filetime = "0.2.21"
futures-util = { version = "0.3.28", default-features = false }
harmony-differ = { path = "../harmony-differ" }
log = "0.4.19"
rand = { version = "0.8.5" }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs"] }
#tokio-util = { version = "0.7.8", features = ["io"] }
