[package]
name = "harmony-server"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", default-features = false, features = [
    "http1",
    "http2",
    "tokio",
    "json",
    "headers",
    "query",
    "macros",  # for debugging
] }
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
env_logger = "0.10.1"
filetime = "0.2.22"
futures-util = { version = "0.3.29", default-features = false }
harmony-differ = { path = "../harmony-differ" }
log = "0.4.20"
openssl = { version = "0.10.60", features = ["vendored"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "fs"] }
#tokio-util = { version = "0.7.8", features = ["io"] }
